Fix study list on mobile FF

--- a/tools/themes/mobile.css
+++ b/tools/themes/mobile.css
@@ -243,6 +243,10 @@ body.lichessTools.lichessTools-theme_mobile.mobile .forum .slist td:last-child {
   display: table-cell;
 }
 
+body.lichessTools.lichessTools-theme_mobile.mobile .studies.list .study {
+  max-width:100vw;
+}
+
 /** Prettier **/
 
 body.lichessTools.lichessTools-prettier.lichessTools-theme_mobile.mobile main.analyse.has-players:not(.has-relay-tour) .main-board {
